tests/snapshots/mcp_scenarios__jar-content-search.snap
---
source: tests/mcp_scenarios.rs
expression: execution.response
---
{
  "incomplete": false,
  "results": [
    {
      "context": "org.example.Foo",
      "entry": "META-INF/services/example.Service",
      "jar": {
        "artifact_id": "demo",
        "class_count": 2,
        "coordinate": "org.example:demo:1.0",
        "entry_count": 6,
        "group_id": "org.example",
        "path": "org/example/demo/1.0/demo-1.0.jar",
        "version": "1.0"
      },
      "line": 1
    },
    {
      "context": "org.example.Foo",
      "entry": "META-INF/spring/org.example.AutoConfiguration.imports",
      "jar": {
        "artifact_id": "demo",
        "class_count": 2,
        "coordinate": "org.example:demo:1.0",
        "entry_count": 6,
        "group_id": "org.example",
        "path": "org/example/demo/1.0/demo-1.0.jar",
        "version": "1.0"
      },
      "line": 1
    }
  ],
  "scanned_bytes": 61
}
