tests/snapshots/mcp_scenarios__jar-search-by-version.snap
---
source: tests/mcp_scenarios.rs
expression: execution.response
---
{
  "results": [
    {
      "artifact_id": "demo",
      "class_count": 0,
      "classifier": "sources",
      "coordinate": "org.example:demo:2.0:sources",
      "entry_count": 1,
      "group_id": "org.example",
      "path": "org/example/demo/2.0/demo-2.0-sources.jar",
      "version": "2.0"
    },
    {
      "artifact_id": "demo",
      "class_count": 2,
      "coordinate": "org.example:demo:2.0",
      "entry_count": 2,
      "group_id": "org.example",
      "path": "org/example/demo/2.0/demo-2.0.jar",
      "version": "2.0"
    }
  ]
}
