tests/snapshots/mcp_scenarios__jar-search-scoped-helper.snap
---
source: tests/mcp_scenarios.rs
expression: execution.response
---
{
  "results": [
    {
      "artifact_id": "helper",
      "class_count": 0,
      "classifier": "sources",
      "coordinate": "org.libs:helper:2.0:sources",
      "entry_count": 1,
      "group_id": "org.libs",
      "path": "org/libs/helper/2.0/helper-2.0-sources.jar",
      "version": "2.0"
    },
    {
      "artifact_id": "helper",
      "class_count": 2,
      "coordinate": "org.libs:helper:2.0",
      "entry_count": 2,
      "group_id": "org.libs",
      "path": "org/libs/helper/2.0/helper-2.0.jar",
      "version": "2.0"
    }
  ]
}
