tests/snapshots/mcp_scenarios__outbound-class-reference.snap
---
source: tests/mcp_scenarios.rs
expression: execution.response
---
{
  "results": [
    {
      "kind": "class",
      "source_class": "org.example.Inspectable",
      "source_jar": {
        "artifact_id": "demo",
        "class_count": 2,
        "coordinate": "org.example:demo:2.0",
        "entry_count": 2,
        "group_id": "org.example",
        "path": "org/example/demo/2.0/demo-2.0.jar",
        "version": "2.0"
      },
      "target_artifacts": [],
      "target_owner": "java.lang.Object"
    }
  ]
}
