tests/snapshots/mcp_scenarios__paginated-scoped-class-list.snap
---
source: tests/mcp_scenarios.rs
expression: execution.response
---
{
  "results": [
    {
      "classes": [
        "org.libs.ScopedOnly"
      ],
      "jar": {
        "artifact_id": "helper",
        "class_count": 2,
        "coordinate": "org.libs:helper:2.0",
        "entry_count": 2,
        "group_id": "org.libs",
        "path": "org/libs/helper/2.0/helper-2.0.jar",
        "version": "2.0"
      },
      "offset": 1,
      "total": 2
    }
  ]
}
