tests/snapshots/mcp_scenarios__scoped-class-member-search.snap
---
source: tests/mcp_scenarios.rs
expression: execution.response
---
{
  "results": [
    {
      "class_name": "org.example.Foo",
      "jar": {
        "artifact_id": "helper",
        "class_count": 2,
        "coordinate": "org.libs:helper:2.0",
        "entry_count": 2,
        "group_id": "org.libs",
        "path": "org/libs/helper/2.0/helper-2.0.jar",
        "version": "2.0"
      },
      "kind": "field",
      "name": "value",
      "signature": "I"
    }
  ]
}
